// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Badge checkGrammar=false 1`] = `""`;

exports[`UU5.Bricks.Badge checkGrammar=true 1`] = `""`;

exports[`UU5.Bricks.Badge checkHighlight=false 1`] = `""`;

exports[`UU5.Bricks.Badge checkHighlight=true 1`] = `""`;

exports[`UU5.Bricks.Badge checkSpaces=false 1`] = `""`;

exports[`UU5.Bricks.Badge checkSpaces=true 1`] = `""`;

exports[`UU5.Bricks.Badge className="my-classname" 1`] = `""`;

exports[`UU5.Bricks.Badge className="test-classname" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="brown" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="brown-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="cyan" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="cyan-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="default" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="green" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="green-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="grey" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="grey-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="orange" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="orange-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="pink" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="pink-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="purple" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="purple-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="red" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="red-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="yellow" 1`] = `""`;

exports[`UU5.Bricks.Badge colorSchema="yellow-rich" 1`] = `""`;

exports[`UU5.Bricks.Badge content="This is Content from ContentMixin" 1`] = `
<span
  className="uu5-bricks-badge"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.Bricks.Badge content=12345 1`] = `
<span
  className="uu5-bricks-badge"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.Bricks.Badge controlled=false 1`] = `""`;

exports[`UU5.Bricks.Badge controlled=true 1`] = `""`;

exports[`UU5.Bricks.Badge default props 1`] = `""`;

exports[`UU5.Bricks.Badge disabled=false 1`] = `""`;

exports[`UU5.Bricks.Badge disabled=false 3`] = `""`;

exports[`UU5.Bricks.Badge disabled=true 1`] = `""`;

exports[`UU5.Bricks.Badge disabled=true 3`] = `""`;

exports[`UU5.Bricks.Badge dynamic=false 1`] = `""`;

exports[`UU5.Bricks.Badge dynamic=true 1`] = `""`;

exports[`UU5.Bricks.Badge elementAttrs={"data":{"test":"data-test-value"}} 1`] = `""`;

exports[`UU5.Bricks.Badge fullTextSearchPriority=0 1`] = `""`;

exports[`UU5.Bricks.Badge hidden=false 1`] = `""`;

exports[`UU5.Bricks.Badge hidden=false 3`] = `""`;

exports[`UU5.Bricks.Badge hidden=true 1`] = `""`;

exports[`UU5.Bricks.Badge hidden=true 3`] = `""`;

exports[`UU5.Bricks.Badge id="myId" 1`] = `""`;

exports[`UU5.Bricks.Badge id="test-id" 1`] = `""`;

exports[`UU5.Bricks.Badge ignoreHTML=false 1`] = `""`;

exports[`UU5.Bricks.Badge ignoreHTML=true 1`] = `""`;

exports[`UU5.Bricks.Badge mainAttrs=undefined 1`] = `""`;

exports[`UU5.Bricks.Badge name="myName" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="bigBox" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="bigBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="box" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="box" 3`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="boxCollection" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="container" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="page" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Badge nestingLevel="spa" 1`] = `""`;

exports[`UU5.Bricks.Badge noIndex=false 1`] = `""`;

exports[`UU5.Bricks.Badge noIndex=true 1`] = `""`;

exports[`UU5.Bricks.Badge noPrint=false 1`] = `""`;

exports[`UU5.Bricks.Badge noPrint=true 1`] = `""`;

exports[`UU5.Bricks.Badge pureRender=false 1`] = `""`;

exports[`UU5.Bricks.Badge pureRender=true 1`] = `""`;

exports[`UU5.Bricks.Badge selected=false 1`] = `""`;

exports[`UU5.Bricks.Badge selected=true 1`] = `""`;

exports[`UU5.Bricks.Badge style="padding:8px; borderRadius: 2px" 1`] = `""`;

exports[`UU5.Bricks.Badge style={"backgroundColor":"red","color":"blue"} 1`] = `""`;

exports[`UU5.Bricks.Badge style={"margin":8} 1`] = `""`;

exports[`UU5.Bricks.Badge textCorrector=false 1`] = `""`;

exports[`UU5.Bricks.Badge textCorrector=true 1`] = `""`;

exports[`UU5.Bricks.Badge tooltip="My Tooltip" 1`] = `""`;
